Add note on guice warning